--- a/index.html
+++ b/index.html
@@ -5,9 +5,95 @@
     <title>Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- Custom CSS for additional styling (optional) -->
+    <style>
+        /* Custom CSS to style portfolio */
+        body {
+            padding-top: 56px;
+        }
+        .navbar {
+            background-color: #343a40;
+        }
+        .navbar-brand, .nav-link {
+            color: #ffffff;
+        }
+        .nav-link:hover {
+            color: #f8f9fa;
+        }
+        .jumbotron {
+            background-color: #f8f9fa;
+            padding: 2rem 2rem;
+        }
+    </style>  
   </head>
   <body>
-    <button class="btn btn-success" onclick="$(this).hide();"> Click Me! </button>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">My Portfolio</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    
+    <!-- Main Content -->
+    <div class="container">
+
+        <!-- About Section -->
+        <section id="about">
+            <div class="jumbotron text-center">
+                <h1 class="display-4">Welcome to My Portfolio</h1>
+                <p class="lead">A showcase of my projects and accomplishments.</p>
+            </div>
+        </section>
+
+        <!-- Projects Section -->
+        <section id="projects">
+            <h2>Projects</h2>
+
+            <!-- Project Card -->
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h5 class="card-title">Project 1: React App</h5>
+                    <p class="card-text">A brief description of the project, its purpose, and the skills and technologies used.</p>
+                    <!-- Embed GIF or video -->
+                    <img src="path_to_your_gif.gif" class="img-fluid" alt="Project GIF">
+                </div>
+            </div>
+
+            <!-- Repeat project cards as needed for each project -->
+            <!-- Example of another project -->
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h5 class="card-title">Project 2: React Native App</h5>
+                    <p class="card-text">A brief description of the project, its purpose, and the skills and technologies used.</p>
+                    <!-- Embed GIF or video -->
+                    <img src="path_to_your_gif_or_video.gif" class="img-fluid" alt="Project GIF">
+                </div>
+            </div>
+
+            <!-- Add more project cards as needed -->
+        </section>
+
+        <!-- Contact Section -->
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>If you would like to get in touch, you can reach me at <a href="mailto:your.email@example.com">your.email@example.com</a>.</p>
+        </section>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
