--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#projects">Projects</a>
+                        <a class="nav-link" href="Projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -91,7 +91,7 @@
         <!-- Contact Section -->
         <section id="contact">
             <h2>Contact</h2>
-            <p>If you would like to get in touch, you can reach me at <a href="mailto:your.email@example.com">your.email@example.com</a>.</p>
+            <p>If you would like to get in touch, you can reach me at <a href="mailto:keringuyn@gmail.com">keringuyn@gmail.com</a>.</p>
         </section>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
