--- a/about.html
+++ b/about.html
@@ -1,40 +1,76 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
 <html lang="en">
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">My Portfolio</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Projects.html">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About</title>
+    <style>
+        /* Add styles for the navigation bar */
+        nav {
+            background-color: #333;
+            padding: 10px;
+        }
+
+        nav a {
+            color: white;
+            padding: 10px;
+            text-decoration: none;
+            display: inline-block;
+        }
+
+        nav a:hover {
+            background-color: #575757;
+        }
+
+        /* Add styles for the page content */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            padding: 20px;
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        p {
+            line-height: 1.6;
+            margin-bottom: 20px;
+        }
+    </style>
+</head>
+
+<body>
+    <!-- Navigation bar -->
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="projects.html">Projects</a>
+        <a href="contact.html">Contact</a>
     </nav>
-    
-    <!-- Main Content -->
+
+    <!-- Main content of the page -->
     <div class="container">
+        <h1>About Us</h1>
+        <p>
+            Welcome to Petal & Bloom, your go-to boutique flower shop! We specialize in creating unique and seasonal floral arrangements for weddings, events, and everyday occasions.
+        </p>
+        <p>
+            Our passion for flowers and commitment to sustainability guide everything we do. We source local flowers whenever possible and aim to provide personalized service to each of our customers.
+        </p>
+        <p>
+            Founded by Sarah Thompson, Petal & Bloom has grown from a small shop into a beloved community favorite. Our team of skilled florists is dedicated to making your special moments even more beautiful.
+        </p>
+        <p>
+            Thank you for choosing Petal & Bloom! We look forward to brightening your day with our floral creations.
+        </p>
+    </div>
+</body>
 
-        <!-- About Section -->
-        <section id="about">
-            <div class="jumbotron text-center">
-                <h1 class="display-4">Welcome to My Portfolio</h1>
-                <p class="lead">A showcase of my projects and accomplishments.</p>
-            </div>
-        </section>
- </div>
-
-  </body>
 </html>
