--- a/about.html
+++ b/about.html
@@ -6,44 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <style>
-        /* Add styles for the navigation bar */
-        nav {
-            background-color: #333;
-            padding: 10px;
-        }
-
-        nav a {
-            color: white;
-            padding: 10px;
-            text-decoration: none;
-            display: inline-block;
-        }
-
-        nav a:hover {
-            background-color: #575757;
-        }
-
-        /* Add styles for the page content */
+   <style>
+        /* Custom CSS to style portfolio */
         body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
+            padding-top: 56px;
         }
-
-        .container {
-            padding: 20px;
+        .navbar {
+            background-color: #343a40;
         }
-
-        h1 {
-            color: #333;
+        .navbar-brand, .nav-link {
+            color: #ffffff;
         }
-
-        p {
-            line-height: 1.6;
-            margin-bottom: 20px;
+        .nav-link:hover {
+            color: #f8f9fa;
         }
-    </style>
+        .jumbotron {
+            background-color: #f8f9fa;
+            padding: 2rem 2rem;
+        }
+    </style>  
 </head>
 
 <body>
