--- a/index.html
+++ b/index.html
@@ -60,6 +60,25 @@
             </div>
         </section>
 
+      <section id="about me">
+        <div class="container">
+        <h1> </h1>
+        <h1>About</h1>
+        <p>
+            Welcome to Petal & Bloom, your go-to boutique flower shop! We specialize in creating unique and seasonal floral arrangements for weddings, events, and everyday occasions.
+        </p>
+        <p>
+            Our passion for flowers and commitment to sustainability guide everything we do. We source local flowers whenever possible and aim to provide personalized service to each of our customers.
+        </p>
+        <p>
+            Founded by Sarah Thompson, Petal & Bloom has grown from a small shop into a beloved community favorite. Our team of skilled florists is dedicated to making your special moments even more beautiful.
+        </p>
+        <p>
+            Thank you for choosing Petal & Bloom! We look forward to brightening your day with our floral creations.
+        </p>
+    </div>
+      </section>
+
         <!-- Projects Section -->
         <section id="projects">
             <h2>Projects</h2>
