--- a/projects.html
+++ b/projects.html
@@ -50,23 +50,34 @@
         </div>
     </nav>
 
-    <!-- Main content of the page -->
-    <div class="container">
-        <h1> </h1>
-        <h1>About</h1>
-        <p>
-            Welcome to Petal & Bloom, your go-to boutique flower shop! We specialize in creating unique and seasonal floral arrangements for weddings, events, and everyday occasions.
-        </p>
-        <p>
-            Our passion for flowers and commitment to sustainability guide everything we do. We source local flowers whenever possible and aim to provide personalized service to each of our customers.
-        </p>
-        <p>
-            Founded by Sarah Thompson, Petal & Bloom has grown from a small shop into a beloved community favorite. Our team of skilled florists is dedicated to making your special moments even more beautiful.
-        </p>
-        <p>
-            Thank you for choosing Petal & Bloom! We look forward to brightening your day with our floral creations.
-        </p>
-    </div>
+    <!-- Projects Section -->
+        <section id="projects">
+            <h2>Projects</h2>
+
+            <!-- Project Card -->
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h5 class="card-title">Project 1: React App</h5>
+                    <p class="card-text">A brief description of the project, its purpose, and the skills and technologies used.</p>
+                    <!-- Embed GIF or video -->
+                    <img src="path_to_your_gif.gif" class="img-fluid" alt="Project GIF">
+                </div>
+            </div>
+
+            <!-- Repeat project cards as needed for each project -->
+            <!-- Example of another project -->
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h5 class="card-title">Project 2: React Native App</h5>
+                    <p class="card-text">A brief description of the project, its purpose, and the skills and technologies used.</p>
+                    <!-- Embed GIF or video -->
+                    <img src="path_to_your_gif_or_video.gif" class="img-fluid" alt="Project GIF">
+                </div>
+            </div>
+
+            <!-- Add more project cards as needed -->
+        </section>
+
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
