--- a/contact.html
+++ b/contact.html
@@ -52,20 +52,12 @@
 
     <!-- Main content of the page -->
     <div class="container">
-        <h1> </h1>
-        <h1>About</h1>
-        <p>
-            Welcome to Petal & Bloom, your go-to boutique flower shop! We specialize in creating unique and seasonal floral arrangements for weddings, events, and everyday occasions.
-        </p>
-        <p>
-            Our passion for flowers and commitment to sustainability guide everything we do. We source local flowers whenever possible and aim to provide personalized service to each of our customers.
-        </p>
-        <p>
-            Founded by Sarah Thompson, Petal & Bloom has grown from a small shop into a beloved community favorite. Our team of skilled florists is dedicated to making your special moments even more beautiful.
-        </p>
-        <p>
-            Thank you for choosing Petal & Bloom! We look forward to brightening your day with our floral creations.
-        </p>
+    <!-- Contact Section -->
+        <section id="contact">
+            <h1> </h1>
+            <h2>Contact</h2>
+            <p>If you would like to get in touch, you can reach me at <a href="mailto:keringuyn@gmail.com">keringuyn@gmail.com</a>.</p>
+        </section>
     </div>
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
