--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,8 @@
         <section id="contact">
             <h1> </h1>
             <h2>Contact</h2>
-            <p>If you would like to get in touch, you can reach me at <a href="mailto:keringuyn@gmail.com">keringuyn@gmail.com</a>.</p>
+            <p>If you would like to get in touch, you can reach me at <a href="mailto:keringuyn@gmail.com">keringuyn@gmail.com</a></p>
+            <p>or via LinkedIn here: <a href="www.linkedin.com/in/keri-nguyen">www.linkedin.com/in/keri-nguyen</a>.</p>
         </section>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
