--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
             background-color: #f8f9fa;
             padding: 2rem 2rem;
         }
+        /* Style the photo */
+        img {
+            max-width: 100%; /* Ensures the image doesn't exceed the width of its container */
+            height: auto; /* Maintains aspect ratio */
+        }
+
+        /* Container for the photo */
+        .photo-container {
+            text-align: center; /* Center the image in the container */
+            margin: 20px 0;
+        }
     </style>  
   </head>
   <body>
