--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
             Thank you for choosing Petal & Bloom! We look forward to brightening your day with our floral creations.
         </p>
     </div>
+        <div class="photo-container">
+        <!-- Adding a photo -->
+        <img src="" alt="Keri Headshot Photo">
+    </div>
       </section>
 
         <!-- Projects Section -->
