--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </div>
         <div class="photo-container">
         <!-- Adding a photo -->
-        <img src="" alt="Keri Headshot Photo">
+        <img src="KeriHeadshot.jpg" alt="Keri Headshot Photo">
     </div>
       </section>
 
