--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
            </div>
         <div class="photo-container">
         <!-- Adding a photo -->
-        <img src="KeriHeadshot.JPG" alt="Keri Headshot Photo" width="100" height="300>
+        <img src="KeriHeadshot.JPG" alt="Keri Headshot Photo" width="100" height="125">
     </div>
         <div class="container">
         <h1> </h1>
