--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
         <img src="KeriHeadshot.JPG" alt="Keri Headshot Photo" width="150" height="225">
         </div>
         <p>
-            Welcome to Petal & Bloom, your go-to boutique flower shop! We specialize in creating unique and seasonal floral arrangements for weddings, events, and everyday occasions.
+            I am a first-generation, fourth-year at the University of Central Florida (UCF) studying Digital Media with a focus in Web & Social Platforms.  
         </p>
         <p>
-            Our passion for flowers and commitment to sustainability guide everything we do. We source local flowers whenever possible and aim to provide personalized service to each of our customers.
+            During my time at UCF, I have held positions such as a Resident Assistant (RA), Marketing Assistant at the Recreation and Wellness Center, and Communications Manager for Knight-Thon. Throughout these roles, I have been able to gain leadership skills such as overseeing a team, time management, effective communication, and working with diverse leadership styles.
         </p>
         <p>
-            Founded by Sarah Thompson, Petal & Bloom has grown from a small shop into a beloved community favorite. Our team of skilled florists is dedicated to making your special moments even more beautiful.
+           In my free time, I love hanging out with my cat, learning new recipes, and indulging my love for seeing new places.
         </p>
         <p>
-            Thank you for choosing Petal & Bloom! We look forward to brightening your day with our floral creations.
+           Strengths: Discipline, Consistency, Maximizer, Focus, Relator
         </p>
       </section>
 
