--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
             padding-top: 56px;
         }
         .navbar {
-            background-color: #343a40;
+            background-color: #634876;
         }
         .navbar-brand, .nav-link {
             color: #ffffff;
