--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <h5 class="card-title">ChefIt App</h5>
                     <p class="card-text">The ChefIt App is an app that I have been working on in my senior capstone class. This app allows users to be able to have an all-inclusive and fun cooking experience. With features like an in-app timer and fun avatars called CookSona's that you can unlock, there is something for everyone!</p>
                     <!-- Embed GIF or video -->
-                    <img src="ChefIt.mov" class="img-fluid" alt="ChefIt App Walkthrough">
+                    <img src="ChefIt.mp4" class="img-fluid" alt="ChefIt App Walkthrough">
                 </div>
             </div>
 
