--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             color: #f8f9fa;
         }
         .jumbotron {
-            background-color: #C5BDDC;
+            background-color: #DFDAF1;
             padding: 2rem 2rem;
         }
         /* Style the photo */
