--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
                     <p class="card-text">The ChefIt App is an app that I have been working on in my senior capstone class. This app allows users to be able to have an all-inclusive and fun cooking experience. With features like an in-app timer and fun avatars called CookSona's that you can unlock, there is something for everyone!</p>
                     <!-- Embed GIF or video -->
                   <video controls>
-                  <source src="ChefIt.mp4" type="mp4" alt="ChefIt App Walkthrough">
-                  <!-- Provide fallback text if the video doesn't load -->
+                  <source src="ChefIt.mp4" type="video/mp4" alt="ChefIt App Walkthrough">
                   </video>
                 </div>
             </div>
