--- a/about.html
+++ b/about.html
@@ -62,22 +62,28 @@
     </nav>
 
     <!-- Main content of the page -->
-    <div class="container">
+    <section id="about me">
+        <div class="container">
         <h1> </h1>
         <h1>About</h1>
+        </div>
+        <div class="photo-container">
+        <!-- Adding a photo -->
+        <img src="KeriHeadshot.JPG" alt="Keri Headshot Photo" width="170" height="255">
+        </div>
         <p>
-            Welcome to Petal & Bloom, your go-to boutique flower shop! We specialize in creating unique and seasonal floral arrangements for weddings, events, and everyday occasions.
+            I am a first-generation, fourth-year at the University of Central Florida (UCF) studying Digital Media with a focus in Web & Social Platforms.  
         </p>
         <p>
-            Our passion for flowers and commitment to sustainability guide everything we do. We source local flowers whenever possible and aim to provide personalized service to each of our customers.
+            During my time at UCF, I have held positions such as a Resident Assistant (RA), Marketing Assistant at the Recreation and Wellness Center, and Communications Manager for Knight-Thon. Throughout these roles, I have been able to gain leadership skills such as overseeing a team, time management, effective communication, and working with diverse leadership styles.
         </p>
         <p>
-            Founded by Sarah Thompson, Petal & Bloom has grown from a small shop into a beloved community favorite. Our team of skilled florists is dedicated to making your special moments even more beautiful.
+           In my free time, I love hanging out with my cat, learning new recipes, and indulging my love for seeing new places.
         </p>
         <p>
-            Thank you for choosing Petal & Bloom! We look forward to brightening your day with our floral creations.
+           Strengths: Discipline, Consistency, Maximizer, Focus, Relator
         </p>
-    </div>
+      </section>
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
