--- a/projects.html
+++ b/projects.html
@@ -23,6 +23,12 @@
             background-color: #f8f9fa;
             padding: 2rem 2rem;
         }
+         video {
+            max-width: 100%; /* Ensure the video does not exceed the width of its container */
+            height: auto; /* Maintain aspect ratio */
+            display: block; /* Center the video */
+            margin: 0 auto; /* Center the video */
+        }
     </style>  
 </head>
 
