--- a/projects.html
+++ b/projects.html
@@ -65,19 +65,15 @@
         </div>
     </nav>
 
-    <!-- Projects Section -->
-    <div class="container">    
-    <section id="projects">
-            <h1> </h1>
-            <h2>Projects</h2>
-
-            <!-- Project Card -->
+    <!-- Project Card -->
             <div class="card mb-4">
                 <div class="card-body">
-                    <h5 class="card-title">Project 1: React App</h5>
-                    <p class="card-text">A brief description of the project, its purpose, and the skills and technologies used.</p>
+                    <h5 class="card-title">ChefIt App</h5>
+                    <p class="card-text">The ChefIt App is an app that I have been working on in my senior capstone class. This app allows users to be able to have an all-inclusive and fun cooking experience. With features like an in-app timer and fun avatars called CookSona's that you can unlock, there is something for everyone!</p>
                     <!-- Embed GIF or video -->
-                    <img src="path_to_your_gif.gif" class="img-fluid" alt="Project GIF">
+                  <video controls>
+                  <source src="ChefIt.mp4" type="video/mp4" alt="ChefIt App Walkthrough">
+                  </video>
                 </div>
             </div>
 
