--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,12 @@
         </div>
     </nav>
 
-    <!-- Project Card -->
+   <!-- Projects Section -->
+        <section id="projects">
+          <h1> </h1>  
+          <h2>Projects</h2>
+
+            <!-- Project Card -->
             <div class="card mb-4">
                 <div class="card-body">
                     <h5 class="card-title">ChefIt App</h5>
@@ -78,10 +83,7 @@
                     <img src="path_to_your_gif_or_video.gif" class="img-fluid" alt="Project GIF">
                 </div>
             </div>
-
-            <!-- Add more project cards as needed -->
         </section>
-    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
