--- a/about.html
+++ b/about.html
@@ -25,14 +25,9 @@
         }
        /* Style the photo */
         img {
-            max-width: 100%; /* Ensures the image doesn't exceed the width of its container */
-            height: auto; /* Maintains aspect ratio */
-        }
-
-        /* Container for the photo */
-        .photo-container {
-            text-align: center; /* Center the image in the container */
-            margin: 20px 0;
+            float: left; /* Change to right if you want the image on the right */
+            margin-right: 20px; /* Add space between the image and text */
+            margin-bottom: 20px; /* Add space between the image and text */
         }
     </style>  
 </head>
@@ -67,10 +62,8 @@
         <h1> </h1>
         <h1>About</h1>
         </div>
-        <div class="photo-container">
         <!-- Adding a photo -->
         <img src="KeriHeadshot.JPG" alt="Keri Headshot Photo" width="170" height="255">
-        </div>
         <p>
             I am a first-generation, fourth-year at the University of Central Florida (UCF) studying Digital Media with a focus in Web & Social Platforms.  
         </p>
