--- a/about.html
+++ b/about.html
@@ -63,7 +63,10 @@
         <h1>About</h1>
         </div>
         <!-- Adding a photo -->
+         <div class="photo-container">
+        <!-- Adding a photo -->
         <img src="KeriHeadshot.JPG" alt="Keri Headshot Photo" width="170" height="255">
+        </div>
         <p>
             I am a first-generation, fourth-year at the University of Central Florida (UCF) studying Digital Media with a focus in Web & Social Platforms.  
         </p>
