--- a/about.html
+++ b/about.html
@@ -29,6 +29,10 @@
             margin-right: 20px; /* Add space between the image and text */
             margin-bottom: 20px; /* Add space between the image and text */
         }
+       /* Reset float when necessary */
+        .clear-float {
+            clear: both;
+        }
     </style>  
 </head>
 
