--- a/about.html
+++ b/about.html
@@ -62,9 +62,10 @@
 
     <!-- Main content of the page -->
     <div class="container">
-    <section id="about me">
+    <section id="about">
         <h1> </h1>
         <h1>About</h1>
+        
         <!-- Adding a photo -->
          <div class="photo-container">
         <!-- Adding a photo -->
@@ -82,7 +83,7 @@
         <p>
            Strengths: Discipline, Consistency, Maximizer, Focus, Relator
         </p>
-      </section>
+    </section>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
