--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
             <!-- Example of another project -->
             <div class="card mb-4">
                 <div class="card-body">
-                    <h5 class="card-title">Project 2: React Native App</h5>
-                    <p class="card-text">A brief description of the project, its purpose, and the skills and technologies used.</p>
+                    <h5 class="card-title">Third Place</h5>
+                    <p class="card-text">Sociologist Ray Oldenburg coined the term “third place”, used for building relationships and having a good time that is in between home (the 1st place) and work (the 2nd place). This sparked the idea for Third Place to allow users to find a Third Place.</p>
                     <!-- Embed GIF or video -->
                     <img src="path_to_your_gif_or_video.gif" class="img-fluid" alt="Project GIF">
                 </div>
