--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <h5 class="card-title">Third Place</h5>
                     <p class="card-text">Sociologist Ray Oldenburg coined the term “third place”, used for building relationships and having a good time that is in between home (the 1st place) and work (the 2nd place). This sparked the idea for Third Place to allow users to find a Third Place.</p>
                     <!-- Embed GIF or video -->
-                    <img src="path_to_your_gif_or_video.gif" class="img-fluid" alt="Project GIF">
+                    <source src="ThirdPlace.mp4" type="video/mp4" alt="ThirdPlace App Walkthrough">
                 </div>
             </div>
 
