--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,9 @@
                     <h5 class="card-title">Third Place</h5>
                     <p class="card-text">Sociologist Ray Oldenburg coined the term “third place”, used for building relationships and having a good time that is in between home (the 1st place) and work (the 2nd place). This sparked the idea for Third Place to allow users to find a Third Place.</p>
                     <!-- Embed GIF or video -->
-                    <source src="ThirdPlace.mp4" type="video/mp4" alt="ThirdPlace App Walkthrough">
+                   <video controls>  
+                  <source src="ThirdPlace.mp4" type="video/mp4" alt="ThirdPlace App Walkthrough">
+                    </video>
                 </div>
             </div>
         </section>
