--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <!-- Contact Section -->
         <section id="contact">
             <h2>Contact</h2>
-            <p>If you would like to get in touch, you can reach me at <a href="mailto:keringuyn@gmail.com">keringuyn@gmail.com</a> or via LinkedIn here: <a href="www.linkedin.com/in/keri-nguyen">www.linkedin.com/in/keri-nguyen</a>.</p>
+            <p>If you would like to get in touch, you can reach me at <a href="mailto:keringuyn@gmail.com">keringuyn@gmail.com</a>.</p>
         </section>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
